--- a/GM/index.html
+++ b/GM/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vamos Fazer Dinheiro</title>
 </head>
+    <body>
+    <h1>Vamos fazer dinheiro</h1>
+    <img src="luffy.jpg" alt="Luffy de One Piece">
+</body>
 </html>
