--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Site de Apresentação</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-    <body>
-    <h1>Teste Git</h1>
+<body>
+    <header>
+        <h1>Bem-vindo ao meu site</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Sobre Mim</h2>
+            <p>Eu sou [seu nome] e este é o meu site de apresentação.</p>
+        </section>
+        <section>
+            <h2>Meus Interesses</h2>
+            <ul>
+                <li>Tecnologia</li>
+                <li>Programação</li>
+                <li>Viagens</li>
+            </ul>
+        </section>
+        <button id="mostrar-mensagem">Clique para ver uma mensagem!</button>
+        <div id="mensagem"></div>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
