--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,25 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Bem-vindo ao meu site</h1>
+    <header class="header">
+        <a href="#" class="logo">
+            <img src="./img/logo.png" alt="logo"/>
+        </a>
     </header>
-    <main>
-        <section>
-            <h2>Sobre Mim</h2>
-            <p>Eu sou [seu nome] e este é o meu site de apresentação.</p>
-        </section>
-        <section>
-            <h2>Meus Interesses</h2>
-            <ul>
-                <li>Tecnologia</li>
-                <li>Programação</li>
-                <li>Viagens</li>
-            </ul>
-        </section>
-        <button id="mostrar-mensagem">Clique para ver uma mensagem!</button>
-        <div id="mensagem"></div>
-    </main>
-    <script src="script.js"></script>
 </body>
 </html>
